Include nominalVoltages as a parameter when fetching the equipment IDs.
Signed-off-by: AAJELLAL <ali.ajellalod@gmail.com>