@@ -10,10 +10,7 @@ import com.powsybl.commons.PowsyblException;
 import com.powsybl.iidm.network.*;
 import com.powsybl.network.store.client.NetworkStoreService;
 import com.powsybl.network.store.client.PreloadingStrategy;
-import org.gridsuite.network.map.dto.AllElementsInfos;
-import org.gridsuite.network.map.dto.ElementInfos;
-import org.gridsuite.network.map.dto.ElementType;
-import org.gridsuite.network.map.dto.InfoTypeParameters;
+import org.gridsuite.network.map.dto.*;
 import org.gridsuite.network.map.dto.definition.hvdc.HvdcShuntCompensatorsInfos;
 import org.gridsuite.network.map.dto.mapper.*;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -53,9 +50,10 @@ public class NetworkMapService {
         return substationsIds == null ? PreloadingStrategy.COLLECTION : PreloadingStrategy.NONE;
     }
 
-    public List<String> getSubstationsIds(UUID networkUuid, String variantId) {
+    public List<String> getSubstationsIds(UUID networkUuid, String variantId, Set<Double> nominalVoltages) {
         Network network = getNetwork(networkUuid, PreloadingStrategy.COLLECTION, variantId);
         return network.getSubstationStream()
+                .filter(substation -> substation.getVoltageLevelStream().anyMatch(voltageLevel -> nominalVoltages == null || nominalVoltages.contains(voltageLevel.getNominalV())))
                 .map(Substation::getId).collect(Collectors.toList());
     }
 
@@ -78,11 +76,11 @@ public class NetworkMapService {
                 .build();
     }
 
-    public List<String> getVoltageLevelsIds(UUID networkUuid, String variantId, List<String> substationsIds) {
+    public List<String> getVoltageLevelsIds(UUID networkUuid, String variantId, List<String> substationsIds, Set<Double> nominalVoltages) {
         Network network = getNetwork(networkUuid, getPreloadingStrategy(substationsIds), variantId);
         return substationsIds == null ?
-                network.getVoltageLevelStream().map(VoltageLevel::getId).collect(Collectors.toList()) :
-                substationsIds.stream().flatMap(id -> network.getSubstation(id).getVoltageLevelStream().map(VoltageLevel::getId)).collect(Collectors.toList());
+                network.getVoltageLevelStream().filter(voltageLevel -> nominalVoltages == null || nominalVoltages.contains(voltageLevel.getNominalV())).map(VoltageLevel::getId).toList() :
+                substationsIds.stream().flatMap(id -> network.getSubstation(id).getVoltageLevelStream().map(VoltageLevel::getId)).toList();
     }
 
     public List<ElementInfos> getVoltageLevelEquipments(UUID networkUuid, String voltageLevelId, String variantId, List<String> substationsId) {
@@ -115,7 +113,7 @@ public class NetworkMapService {
                 .map(BusbarSection::getId).collect(Collectors.toList());
     }
 
-    public List<String> getHvdcLinesIds(UUID networkUuid, String variantId, List<String> substationsIds) {
+    public List<String> getHvdcLinesIds(UUID networkUuid, String variantId, List<String> substationsIds, Set<Double> nominalVoltages) {
         Network network = getNetwork(networkUuid, getPreloadingStrategy(substationsIds), variantId);
         if (substationsIds == null) {
             return network.getHvdcLineStream()
@@ -123,6 +121,7 @@ public class NetworkMapService {
         } else {
             return substationsIds.stream()
                     .flatMap(substationsId -> network.getSubstation(substationsId).getVoltageLevelStream())
+                    .filter(voltageLevel -> nominalVoltages == null || nominalVoltages.contains(voltageLevel.getNominalV()))
                     .flatMap(voltageLevel -> voltageLevel.getConnectableStream(HvdcConverterStation.class))
                     .map(HvdcConverterStation::getHvdcLine)
                     .filter(Objects::nonNull)
@@ -132,7 +131,7 @@ public class NetworkMapService {
         }
     }
 
-    public List<String> getTieLinesIds(UUID networkUuid, String variantId, List<String> substationsIds) {
+    public List<String> getTieLinesIds(UUID networkUuid, String variantId, List<String> substationsIds, Set<Double> nominalVoltages) {
         Network network = getNetwork(networkUuid, getPreloadingStrategy(substationsIds), variantId);
         if (substationsIds == null) {
             return network.getTieLineStream()
@@ -140,6 +139,7 @@ public class NetworkMapService {
         } else {
             return substationsIds.stream()
                     .flatMap(substationsId -> network.getSubstation(substationsId).getVoltageLevelStream())
+                    .filter(voltageLevel -> nominalVoltages == null || nominalVoltages.contains(voltageLevel.getNominalV()))
                     .flatMap(voltageLevel -> voltageLevel.getConnectableStream(DanglingLine.class))
                     .map(DanglingLine::getTieLine)
                     .flatMap(Optional::stream)
@@ -273,22 +273,22 @@ public class NetworkMapService {
         return HvdcInfosMapper.toHvdcShuntCompensatorsInfos(hvdcLine);
     }
 
-    public List<String> getElementsIds(UUID networkUuid, String variantId, List<String> substationsIds, ElementType elementType) {
-        switch (elementType) {
+    public List<String> getElementsIds(UUID networkUuid, String variantId, EquipmentInfos equipmentInfos) {
+        switch (equipmentInfos.elementType()) {
             case SUBSTATION:
-                return getSubstationsIds(networkUuid, variantId);
+                return getSubstationsIds(networkUuid, variantId, equipmentInfos.nominalVoltages());
             case TIE_LINE:
-                return getTieLinesIds(networkUuid, variantId, substationsIds);
+                return getTieLinesIds(networkUuid, variantId, equipmentInfos.substationsIds(), equipmentInfos.nominalVoltages());
             case HVDC_LINE:
-                return getHvdcLinesIds(networkUuid, variantId, substationsIds);
+                return getHvdcLinesIds(networkUuid, variantId, equipmentInfos.substationsIds(), equipmentInfos.nominalVoltages());
             case VOLTAGE_LEVEL:
-                return getVoltageLevelsIds(networkUuid, variantId, substationsIds);
+                return getVoltageLevelsIds(networkUuid, variantId, equipmentInfos.substationsIds(), equipmentInfos.nominalVoltages());
             default:
-                return getConnectablesIds(networkUuid, variantId, substationsIds, elementType);
+                return getConnectablesIds(networkUuid, variantId, equipmentInfos.substationsIds(), equipmentInfos.elementType(), equipmentInfos.nominalVoltages());
         }
     }
 
-    private List<String> getConnectablesIds(UUID networkUuid, String variantId, List<String> substationsIds, ElementType elementType) {
+    private List<String> getConnectablesIds(UUID networkUuid, String variantId, List<String> substationsIds, ElementType elementType, Set<Double> nominalVoltages) {
         Network network = getNetwork(networkUuid, getPreloadingStrategy(substationsIds), variantId);
         if (substationsIds == null) {
             return getConnectableStream(network, elementType)
@@ -297,6 +297,7 @@ public class NetworkMapService {
         } else {
             return substationsIds.stream()
                     .flatMap(substationId -> network.getSubstation(substationId).getVoltageLevelStream())
+                    .filter(voltageLevel -> nominalVoltages == null || nominalVoltages.contains(voltageLevel.getNominalV()))
                     .flatMap(voltageLevel -> voltageLevel.getConnectableStream((Class<? extends Connectable>) elementType.getElementClass()))
                     .map(Connectable::getId)
                     .distinct()
